Fixed routing, added common wrapping component.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.App,.page {
     text-align: center;
     background-color: #282c34;
     width: 100vw;
